--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 discord.py==2.3.2
-google-generativeai==0.6.10  <-- CHẮC CHẮN PHẢI LÀ PHIÊN BẢN NÀY
+google-generativeai==0.6.10 
 Pillow
 pytesseract
+
